Fixed highlight appearing on iOS

--- a/doc/templates/gamalto/static/styles/jsdoc-gamalto.css
+++ b/doc/templates/gamalto/static/styles/jsdoc-gamalto.css
@@ -13,6 +13,10 @@
     font-style: normal;
 }
 
+* {
+    -webkit-tap-highlight-color: transparent;
+}
+
 html {
     background-color: #fff;
     font-size: 14px;
